--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
       <h3></h3>
       <p></p><br><br>
      <center>
-      <a href="https://www.instagram.com/amitgajare_/" class="icon">Instagram</a> |
-      <a href="https://codepen.io/AmitGajare" class="icon">Codepen</a> |
-     <a href="https://github.com/Amitgajare2" class="icon">Github</a> |
-     <a href="https://in.pinterest.com/Amitgajare_/" class="icon">Pinterest</a>
+      <a href="https://www.instagram.com/kutty_rolex_naveen" class="icon">Instagram</a> |
+      <a href="https://codepen.io/cybernaveen" class="icon">Codepen</a> |
+     <a href="https://github.com/Naveenhacking" class="icon">Github</a> |
+
      </center>
      <br>
     </div>
